# pkg_name_validator

./: .gitignore  README.md  pyproject.toml
lists/: invalid_names.txt
src/pkg_name_validator/: __main__.py
tests/: test_pkg_name_validator.py
