[tool.poetry]
name = "pkg_name_validator"
version = "1.0.0"
description = "A package for making sure your desired package name is available."
authors = ["AfterNoon PM <h2o.Drop2010+pypi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tinkering-townsperson/pkg_name_validator"
license = "GPL-3.0-only"
classifiers = [

]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tinkering-townsperson/pkg_name_validator/issues"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
